@@ -1,3 +1,6 @@
+Upcoming:
+- Clipboard support in the controller is working again
+
 1.16-3.0.7:
 - Update to latest McJtyLib
 
